# spoken-word-engine

./: .railwayignore  Dockerfile.cpu  Dockerfile.gpu  HUGGING_FACE_DEPLOYMENT_GUIDE.md  README.md  huggingface_space_setup.md  index.html  local-dia-setup.md  pyproject.toml  railway.toml  tailwind.config.ts
huggingface-space/: Dockerfile  README.md  app.py  requirements.txt
huggingface-space/dia/: __init__.py  audio.py  config.py  layers.py  model.py  state.py
python/: README.md  app.py  cd  docker-compose.yml  requirements.txt  run_server.py
python/dia/: __init__.py
src/: App.tsx  index.css
src/components/: Footer.tsx  HeroSection.tsx  Navbar.tsx  PricingSection.tsx  TTSInterface.tsx
src/components/ui/: button.tsx
src/integrations/supabase/: client.ts
src/pages/: About.tsx  Auth.tsx  Features.tsx  Index.tsx  Profile.tsx  TTS.tsx
supabase/: config.toml
supabase/functions/dia-direct-load/: index.ts
supabase/functions/dia-hf-direct/: index.ts
supabase/functions/dia-tts/: index.ts
supabase/functions/text-to-speech/: index.ts
supabase/migrations/: 20250807183352_818944ef-c28e-4911-aa6d-e1372ccc21fd.sql  20250807183408_d47ba372-eba3-4945-af4e-1002072ca669.sql  20250808152806_936f0ce9-e437-47c9-90ef-7a5fa6806891.sql
