[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dia-tts"
version = "1.0.0"
description = "Dia Text-to-Speech Model"
authors = [
    {name = "Nari Labs", email = "contact@nari-labs.com"},
]
license = {text = "MIT"}
readme = "python/README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0", 
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.16.0",
    "dac>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["dia*"]

[tool.setuptools.package-dir]
"" = "python"